# rag-pipeline

./: .gitignore  README.md  architecture.md  chunks_anaysis.py  lab-notes.md  main.py  pyproject.toml  search.py
misc/: serve_md_docs.py
src/rag/: chunking.py  config.py  embedding.py  eval.py  git.py  llm.py  llm_judge.py  load.py  models.py  parsing.py  pipeline.py  reranker.py  retrieval.py  sheets.py
src/rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chunking.py  test_eval.py  test_import_docs.py  test_load.py  test_reranker.py
